2002-09-10  Keith Seitz  <keiths@redhat.com>

	* mi-simplerun.exp (test_controlled_execution): Follow renaming of
	mi_run_to to mi_execute_to.
	* mi-var-cmd.exp: Likewise.
	* mi0-simplerun.exp: Likewise.
	* mi0-var-cmd.exp: Likewise.

2002-09-03  Keith Seitz  <keiths@redhat.com>

	* gdb680.exp: New file to test to check for uiout list/tuple
	nesting bug.

2002-03-04  Michael Chastain  <mec@shout.net>

	* mi-var-cmd.exp: In test "create local variable func",
	accommodate gcc v3 function signature.
	* mi0-var-cmd-exp: Ditto.

2002-02-05  Jim Blandy  <jimb@redhat.com>

	* mi-regs.exp: Various cleanups for SPARC-only tests.
	(test_breakpoints_creation_and_listing): Format of breakpoint
	table has changed.
	(sparc_register_tests): Expand floating-point number regexp to
	recognize NaN values, too.  Replace ineffectual single backslash
	before a hyphen with a double backslash.  Don't check the exact
	numbers of the registers which have changed, since there's no way
	to know which registers changed, exactly; just check that the
	result is well-formed.
	* mi0-regs.exp: (sparc_register_tests): Same as for
	sparc_register_tests in mi-regs.exp.

	* mi-var-child.exp ("get children of struct_declarations", "get
	children of struct_declarations.s2.u2.u1s2", "get children of
	weird"): Tolerate argument types when they appear in function
	types.  (Dwarf 2 includes prototype info; STABS does not.)
	* mi0-var-child.exp: Same.

2001-12-19  Keith Seitz  <keiths@redhat.com>

	* mi-var-display.exp: char* variables have a child. Update all
	occurences.
	* mi0-var-display.exp: Likewise.

2001-08-29  Andrew Cagney  <cagney@redhat.com>

	* mi-var-cmd.exp, mi0-var-cmd.exp: Variable lpcharacter has one
	child.  Soften floating point tests.

2001-08-09  Andrew Cagney  <ac131313@redhat.com>

	* mi0-var-block.exp, mi0-stack.exp, mi0-simplerun.exp,
	mi0-regs.exp, mi0-watch.exp, mi0-stepi.exp, mi0-until.exp,
	mi0-return.exp, mi0-read-memory.exp, mi0-eval.exp,