@@ -1,3 +1,8 @@
+2002-09-13  Keith Seitz  <keiths@redhat.com>
+
+	* mi-var-child.exp: Use mi_step_to and mi_execute_to instead
+	of a bunch of repeated send_gdb/gdb_expect statements.
+
 2002-09-10  Keith Seitz  <keiths@redhat.com>
 
 	* mi-simplerun.exp (test_controlled_execution): Follow renaming of
